# piloto-automatico

./: CMakeLists.txt  README.md
components/button/: CMakeLists.txt
components/button/include/: button.h
components/button/src/: button.c
components/error-handling/: CMakeLists.txt
components/error-handling/include/: error_handling.h
components/error-handling/src/: error_handling.c
components/low-pass-filter/: CMakeLists.txt  Kconfig.projbuild
components/low-pass-filter/include/: low_pass_filter.h
components/low-pass-filter/src/: low_pass_filter.c
components/lrgb/: CMakeLists.txt
components/lrgb/include/: lrgb.h
components/lrgb/src/: lrgb.c
components/motor/: CMakeLists.txt
components/motor/include/: motor.h
components/motor/src/: motor.c
components/motor/src/private/: mcpwm_cmpr_helper.c
components/nvs-helper/: CMakeLists.txt
components/nvs-helper/include/: nvs_helper.h
components/nvs-helper/src/: nvs_helper.c
components/pid_control/: Kconfig.projbuild  pid_control.c
components/pid_control/include/: pid_control.h
components/tasks/: CMakeLists.txt  Kconfig.projbuild
components/tasks/include/: tasks.h
components/tasks/src/: button_task.c  control_task.c  udp_comm_task.c
components/tasks/src/udp_private/: udp_priv.c  udp_priv.h
components/wifi/: CMakeLists.txt
components/wifi/include/: wifi.h
components/wifi/src/: wifi_ap_handler.c  wifi_udp_comm.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c
